--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #121212;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
