--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,57 @@
   }
 }
 
+.random {
+  margin: 1rem 0;
+
+  &__container {
+    border-radius: 0.2rem;
+    background-color: #1e1e1e;
+    padding: 1rem;
+    color: white;
+
+    &__header {
+      font-size: 1.2rem;
+      color: white;
+      font-weight: 100;
+      margin-bottom: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    &__subtitle {
+      font-size: 0.9rem;
+      margin-bottom: 0.5rem;
+      color: #a1a1a1;
+    }
+
+    &__description {
+      font-size: 0.9rem;
+      color: white;
+      margin-bottom: 0.5rem;
+    }
+
+    &__bottom {
+      display: flex;
+      gap: 1rem;
+
+      font-size: 0.9rem;
+
+      &__item {
+        display: flex;
+        gap: 0.5rem;
+        font-size: 0.9rem;
+
+        &--type {
+          color: gray;
+        }
+      }
+    }
+  }
+}
+
 .filter-container {
   margin-bottom: 1rem;
   gap: 1rem;
@@ -137,6 +188,7 @@
         &__item {
           display: flex;
           gap: 0.5rem;
+          font-size: 0.9rem;
 
           &--type {
             color: gray;
